--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -22,7 +22,7 @@
             <img src="favePic.png"" alt="me & the best gorl" width="400" height="600">
 
             <br>
-            <p <font style= "font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif"> <a href="/img/favePic.jpg" style="text-decoration: none">pic of the best gorl</a> + <a href="https://youtu.be/QrR_gm6RqCo" style="text-decoration: none">this vid on repeat forever</a></font>
+            <p <font style= "font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif"> <a href="/img/favePic.png" style="text-decoration: none">pic of the best gorl</a> + <a href="https://youtu.be/QrR_gm6RqCo" style="text-decoration: none">this vid on repeat forever</a></font>
             
             </center>
         
