--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -6,7 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billie</title>
 </head>
-<body>
-    
+<body style="font-family:'Courier New';">
+
+
+<h1> Billiepedia </h1>
+
+<img src="/img/BillieRose.jpg" alt="Billie" width="340" height="420"><br>
+<nav>
+    <a href="#EarlyLife">Early Life</a><br />
+    <a href="#Hobbies">Hobbies & Interests</a><br />
+    <a href="#Diet">Diet</a><br />
+    <a href="#Daily">Daily Routine</a><br />
+    <a href="#Connections">Connections</a><br />
+</nav>
+
+<p> Billie (born March-ish 2021) is an Australian Cattle Rat ((link)Australian Cattle dog/ (link) Rat Terrier mix.) Also referred to as a good gorl, Billie is a domesticated descendent of the (link)wolf.</p>
+
+<h3 id="EarlyLife"> <h3 style="font-style:italic"> Early Life </h3>
+<p> Billie was a (link)street dog of Oklahoma after escaping from a farm. She was found by a man driving home to Boulder, Colorado on November 18, 2021. She was found without a collar or a chip, but she made herself comfy in the car and insisted on going home with him. Upon her arrival in Boulder, it was clear she wasn’t going to be a good fit with her finder’s dog. This is when her chosen human came into her life, rescued her, named her Billie after (link)Billie Holliday, fashioned her in a (link)Pendleton dog collar, and brought her to her forever home. </p>
+
+<h3 id="Hobbies"> <h3 style="font-style:italic"> Hobbies & Interests </h3>
+<p> Billie’s DNA encourages herding instincts. Billie loves herding people, dogs, other animals, and her toys. She loves playing fetch, doin’ a (link)snooze, and zooming around. Billie is interested in food of all sorts, but especially red meats. </p>
+
+<h3 id= "Diet"> <h3 style="font-style:italic"> Diet </h3>
+<p> Billie’s diet consists of (link)Fromm Family Gold dog food, tastefully prepared with a balanced blend of select proteins and wholesome ingredients for adult dogs. Billie indulges in table food when it misses a human’s mouth, her favorite treat. She loves carrots and (link)Dentley dental chews.</p>
+
+<h3 id= "Daily"> <h3 style="font-style:italic"> Daily Routines </h3>
+<p>Billie wakes up when her human wakes up, sometimes that’s 6 am and sometimes that’s 11 am. She does poopoos and peepees every day. After eating her breakfast, she does a zoom around the house with her toys for a while. When her human leaves the house, she does some more snoozin’ in her crate. Billie goes on walks, chases balls, goes on a hike with (link)Sunshine Canyon Dog Rescue every Wednesday, eats dinner, cuddles humans, and barks incessantly at any and every sound that exists. </p>
+
+<h3 id= "Connections"> <h3 style="font-style:italic"> Connections </h3>
+<p>Billie is connected to many other dogs. </p>
+
 </body>
 </html>
