--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -4,38 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Billie</title>
+    <title>Billiepedia</title>
 </head>
-<body style="font-family:'Courier New';">
 
 
-<h1> Billiepedia </h1>
+<body style="background-color: rgb(233, 233, 230); text-align: center; font-family:monospace; border-style:solid; border-color: rgb(233, 233, 230); border-width:70pt;">
 
-<img src="/img/BillieRose.jpg" alt="Billie" width="340" height="420"><br>
-<nav>
-    <a href="#EarlyLife">Early Life</a><br />
-    <a href="#Hobbies">Hobbies & Interests</a><br />
-    <a href="#Diet">Diet</a><br />
-    <a href="#Daily">Daily Routine</a><br />
-    <a href="#Connections">Connections</a><br />
+<h1 id="Top" style="text-align:center"> Billiepedia </h1><br><br><br>
+
+
+<nav style="text-align: center">
+    <a href="#EarlyLife">Early Life</a> -
+    <a href="#Hobbies">Hobbies & Interests</a> -
+    <a href="#Diet">Diet</a> -
+    <a href="#Daily">Daily Routine</a> -
+    <a href="#Connections">Connections</a> 
+</nav>
+<br><br>
+
+<img src="/img/BillieRose.jpg" alt="Billie with a rose!" width="230" height="320"> <img src="/img/BillieBath.JPG" alt="Billie in the bath!" width="320" height="320"> <img src="/img/BillieSnow.jpg" alt="Billie in the snow!" width="230" height="320"> <br><br><br>
+<br>
+
+<p style="text-align:center"> <b>Billie</b> (born March-ish 2021) is an Australian Cattle Rat (<a href="https://en.wikipedia.org/wiki/Australian_Cattle_Dog">Australian Cattle dog</a> / <a href="https://en.wikipedia.org/wiki/Rat_Terrier"> Rat Terrier</a> mix.)<br> Not to be confused with a good boy; she's a good gorl! Billie is a domesticated descendent of the <a href="https://en.wikipedia.org/wiki/Wolf">wolf</a>. </p><br><br>
+
+
+
+
+<h3 id="EarlyLife" style="text-align:left; font-style:italic"> Early Life </h3>
+<hr>
+<p style="text-align:left"> Billie is a rescued <a href="https://en.wikipedia.org/wiki/Street_dog">street dog</a> from Oklahoma. She was found by a man driving home to Boulder, Colorado on November 18, 2021. She was found without a collar or a chip, but she made herself comfy in the car and insisted on going home with him. Upon her arrival in Boulder, it was clear she wasn’t going to be a good fit with her finder’s dog. This is when her chosen human came into her life, rescued her, named her Billie after <a href="https://en.wikipedia.org/wiki/Billie_Holiday">Billie Holiday</a>, fashioned her in a <a href="https://en.wikipedia.org/wiki/Pendleton_Woolen_Mills">Pendleton</a> dog collar, and brought her to her forever home. </p>
+<br><br>
+
+
+<h3 id="Hobbies" style="text-align:left; font-style:italic"> Hobbies & Interests </h3>
+<hr>
+<p style="text-align:left"> Billie’s DNA encourages herding instincts. In her dream world, she would chase <a href="https://emuncy.github.io/wa/wa3.html">cows</a> by day and snuggle her human all night. She loves herding people, dogs, other animals, and her toys. She loves playing fetch, doin’ a <a href="https://www.reddit.com/r/funny/comments/6j46zm/doin_a_snooze/?utm_source=share&utm_medium=web2x&context=3">snooze</a>, and zooming around. She is interested in food of all sorts, but especially red meats. </p>
+<br><br>
+
+
+<h3 id= "Diet" style="text-align:left; font-style:italic"> Diet </h3>
+<hr>
+<p style="text-align:left"> Billie’s diet consists of <a href="https://frommfamily.com/"> Fromm Family</a> Gold dog food, tastefully prepared with a balanced blend of select proteins and wholesome ingredients for adult dogs. Billie indulges in table food when it misses a human’s mouth, her favorite treat. She loves carrots and <a href="https://www.petsmart.com/featured-brands/dentleys/?gclsrc=aw.ds&gclid=CjwKCAiA_vKeBhAdEiwAFb_nreY9SLNT0bd4nen0IRBe8GF6sS_JsERnsLfE2vCqKg_i4pJYfRvoDxoCnqoQAvD_BwE&gclsrc=aw.ds"> Dentley dental chews.</a></p>
+<br><br>
+
+
+<h3 id= "Daily" style="text-align:left; font-style:italic"> Daily Routines </h3>
+<hr>
+<p style="text-align:left"> Billie wakes up when her human wakes up, sometimes that’s 6 am and sometimes that’s 11 am. She does poopoos and peepees every day. After eating her breakfast, she does a zoom around the house with her toys for a while. When her human leaves the house, she does some more snoozin’ in her crate. Billie goes on walks, chases balls, goes on a hike with <a href="http://www.sunshinecanyondogrescue.org/"> Sunshine Canyon Dog Rescue</a> every Wednesday, eats dinner, cuddles humans, and barks incessantly at any and every sound that exists. </p>
+<br><br>
+
+
+<h3 id= "Connections" style="text-align:left; font-style:italic"> Connections </h3>
+<hr>
+<p style="text-align:left"> Billie is connected to many other dogs, even though if it were up to her she would be the only dog in the entire <a href="https://en.wikipedia.org/wiki/Milky_Way">universe</a>. She expresses high interest in cats, but the verdict on how Billie and <a href="https://tinystranger21.github.io/WA/wa3.html">cats</a> co-exist remains unknown.<br>
+See also: <a href="https://haileyu.github.io/haileyu/wa/wa3">Harley and Kody</a>, as well as <a href="https://lspann.github.io/wa/wa3.html">Bella and Jackson.</a> </p>
+
+<br><br><br><br><br>
+
+<nav style="text-align: center">
+    <a href="#Top">Top of page</a> - 
+    <a href="#EarlyLife">Early Life</a> -
+    <a href="#Hobbies">Hobbies & Interests</a> -
+    <a href="#Diet">Diet</a> -
+    <a href="#Daily">Daily Routine</a> -
+    <a href="#Connections">Connections</a> 
 </nav>
 
-<p> Billie (born March-ish 2021) is an Australian Cattle Rat ((link)Australian Cattle dog/ (link) Rat Terrier mix.) Also referred to as a good gorl, Billie is a domesticated descendent of the (link)wolf.</p>
-
-<h3 id="EarlyLife"> <h3 style="font-style:italic"> Early Life </h3>
-<p> Billie was a (link)street dog of Oklahoma after escaping from a farm. She was found by a man driving home to Boulder, Colorado on November 18, 2021. She was found without a collar or a chip, but she made herself comfy in the car and insisted on going home with him. Upon her arrival in Boulder, it was clear she wasn’t going to be a good fit with her finder’s dog. This is when her chosen human came into her life, rescued her, named her Billie after (link)Billie Holliday, fashioned her in a (link)Pendleton dog collar, and brought her to her forever home. </p>
-
-<h3 id="Hobbies"> <h3 style="font-style:italic"> Hobbies & Interests </h3>
-<p> Billie’s DNA encourages herding instincts. Billie loves herding people, dogs, other animals, and her toys. She loves playing fetch, doin’ a (link)snooze, and zooming around. Billie is interested in food of all sorts, but especially red meats. </p>
-
-<h3 id= "Diet"> <h3 style="font-style:italic"> Diet </h3>
-<p> Billie’s diet consists of (link)Fromm Family Gold dog food, tastefully prepared with a balanced blend of select proteins and wholesome ingredients for adult dogs. Billie indulges in table food when it misses a human’s mouth, her favorite treat. She loves carrots and (link)Dentley dental chews.</p>
-
-<h3 id= "Daily"> <h3 style="font-style:italic"> Daily Routines </h3>
-<p>Billie wakes up when her human wakes up, sometimes that’s 6 am and sometimes that’s 11 am. She does poopoos and peepees every day. After eating her breakfast, she does a zoom around the house with her toys for a while. When her human leaves the house, she does some more snoozin’ in her crate. Billie goes on walks, chases balls, goes on a hike with (link)Sunshine Canyon Dog Rescue every Wednesday, eats dinner, cuddles humans, and barks incessantly at any and every sound that exists. </p>
-
-<h3 id= "Connections"> <h3 style="font-style:italic"> Connections </h3>
-<p>Billie is connected to many other dogs. </p>
-
+<br>
+Created by Katie Lynn Fischer, 2023
 </body>
 </html>
