--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -8,7 +8,7 @@
 </head>
 
 
-<body style="background-color: rgb(233, 233, 230); text-align: center; font-family:monospace; border-style:solid; border-color: rgb(233, 233, 230); border-width:30pt;">
+<body style="background-color: rgb(233, 233, 230); text-align: center; font-family:Courier; border-style:solid; border-color: rgb(233, 233, 230); border-width:50pt;">
 
 <h1 id="Top" style="text-align:center"> Billiepedia </h1><br><br><br>
 
@@ -22,7 +22,7 @@
 </nav>
 <br><br>
 
-<img src="/img/BillieRose.jpg" alt="Billie with a rose!" width="230" height="320"> <img src="/img/BillieBath.JPG" alt="Billie in the bath!" width="320" height="320"> <img src="/img/BillieSnow.jpg" alt="Billie in the snow!" width="230" height="320"> <br><br><br>
+<img src="/img/BillieRose.jpg" alt="Billie with a rose!" width="240" height="320"> <img src="/img/BillieBath.JPG" alt="Billie in the bath!" width="320" height="320"> <img src="/img/BillieSnow.jpg" alt="Billie in the snow!" width="230" height="320"> <br><br><br>
 <br>
 
 <p style="text-align:center"> <b>Billie</b> (born March-ish 2021) is an Australian Cattle Rat (<a href="https://en.wikipedia.org/wiki/Australian_Cattle_Dog">Australian Cattle dog</a> / <a href="https://en.wikipedia.org/wiki/Rat_Terrier"> Rat Terrier</a> mix.)<br> Not to be confused with a good boy; she's a good gorl! Billie is a domesticated descendent of the <a href="https://en.wikipedia.org/wiki/Wolf">wolf</a>. </p><br><br>
@@ -56,8 +56,8 @@
 
 <h3 id= "Connections" style="text-align:left; font-style:italic"> Connections </h3>
 <hr>
-<p style="text-align:left"> Billie is connected to many other dogs, even though if it were up to her she would be the only dog in the entire <a href="https://en.wikipedia.org/wiki/Milky_Way">universe</a>. She expresses high interest in cats, but the verdict on how Billie and <a href="https://tinystranger21.github.io/WA/wa3.html">cats</a> co-exist remains unknown.<br>
-See also: <a href="https://haileyu.github.io/haileyu/wa/wa3">Harley and Kody</a>, as well as <a href="https://lspann.github.io/wa/wa3.html">Bella and Jackson.</a> </p>
+<p style="text-align:left"> Billie is connected to many other dogs, even though if it were up to her she would be the only dog in the entire <a href="https://en.wikipedia.org/wiki/Milky_Way">universe</a>. She expresses high interest in cats, but the verdict on how Billie and <a href="https://tinystranger21.github.io/WA/wa3.html">cats</a> co-exist remains unknown.
+See also: <a href="https://haileyu.github.io/haileyu/wa/wa3">Harley and Kody</a>, as well as <a href="https://lspann.github.io/wa/wa3.html">Bella and Jackson!</a> </p>
 
 <br><br><br><br><br>
 
