--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -8,7 +8,7 @@
 </head>
 
 
-<body style="background-color: rgb(233, 233, 230); text-align: center; font-family:monospace; border-style:solid; border-color: rgb(233, 233, 230); border-width:50pt;">
+<body style="background-color: rgb(233, 233, 230); text-align: center; font-family:monospace; color: rgb(47, 46, 46); border-style:solid; border-color: rgb(233, 233, 230); border-width:50pt;">
 
 <h1 id="Top" style="text-align:center"> Billiepedia </h1><br><br><br>
 
