--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -10,8 +10,8 @@
 
 <body style="background-color: rgb(233, 233, 230); text-align: center; font-family:monospace; color: rgb(47, 46, 46); border-style:solid; border-color: rgb(233, 233, 230); border-width:50pt;">
 
-<h1 id="Top" style="text-align:center"> Billiepedia </h1><br><br><br>
-
+<h1 id="Top" style="text-align:center"> Billiepedia </h1>
+<br>
 
 <nav style="text-align: center">
     <a href="#EarlyLife">Early Life</a> -
@@ -20,12 +20,12 @@
     <a href="#Daily">Daily Routine</a> -
     <a href="#Connections">Connections</a> 
 </nav>
-<br><br>
+<br><br><br><br>
 
 <img src="/img/BillieRose.jpg" alt="Billie with a rose!" width="240" height="320"> <img src="/img/BillieBath.JPG" alt="Billie in the bath!" width="320" height="320"> <img src="/img/BillieSnow.jpg" alt="Billie in the snow!" width="230" height="320"> <br><br><br>
 <br>
 
-<p style="text-align:center"> <b>Billie</b> (born March-ish 2021) is an Australian Cattle Rat (<a href="https://en.wikipedia.org/wiki/Australian_Cattle_Dog">Australian Cattle dog</a> / <a href="https://en.wikipedia.org/wiki/Rat_Terrier"> Rat Terrier</a> mix.)<br> Not to be confused with a good boy; she's a good gorl! Billie is a domesticated descendent of the <a href="https://en.wikipedia.org/wiki/Wolf">wolf</a>. </p><br><br>
+<p style="text-align:center"> <b>Billie</b> (born March-ish 2021) is an Australian Cattle Rat (<a href="https://en.wikipedia.org/wiki/Australian_Cattle_Dog">Australian Cattle dog</a> / <a href="https://en.wikipedia.org/wiki/Rat_Terrier"> Rat Terrier</a> mix).<br> Not to be confused with a good boy; she's a good gorl! Billie is a domesticated descendent of the <a href="https://en.wikipedia.org/wiki/Wolf">wolf</a>. </p><br><br>
 
 
 
