--- a/css/inclassweek4.html
+++ b/css/inclassweek4.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="cssWk4.css">
 </head>
 <body>
-    <h1> hello </h1>
-    <p> hehe </p>
+    <h1 class="thisisaclass"> hello </h1>
+    <p id ="first" class="title"> hehe </p>
+    <div
 </body>
 </html>
