--- a/ica/ica3a-fischer.html
+++ b/ica/ica3a-fischer.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/ica3a-fischer.css">
+    <link rel="stylesheet" href="https://github.com/kfischer93/kfischer93.github.io/blob/main/css/ica3a-fischer.css">
     
 </head>
 <body>
