--- a/quarter term/page1.html
+++ b/quarter term/page1.html
@@ -1,4 +1,9 @@
+<!DOCTYPE html> <!-- added this -->
+<html lang="en"> <!-- add this-->
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- add this -->
     <style>
         body{
             text-align: center;
@@ -20,14 +25,15 @@
     <a href="/html-midterm/page3.html">Page 3</a>
     <span> | </span>
     <a href="/html-midterm/page4.html">Page 4</a>
-    <span> | </span>
+    <!-- <span> | </span>  removing these spans -->
 </div>
 
 <div><a href="https://www.mcsweeneys.net/articles/edgar-allan-poe-watches-too-much-tiktok">Source page</a></div>
 <h1>JANUARY 19, 2023</h1>
-<h3>EDGAR ALLAN POE WATCHES TOO MUCH TikTok</h3>
-<h2>by JAMIE CRICKS</h2>
- 
+<h2>EDGAR ALLAN POE WATCHES TOO MUCH TikTok</h2>
+<h3>by JAMIE CRICKS</h3> <!-- fixed the order of the h1 h2 h3 -->
+<!-- removed a div -->
+
 <p>Once upon a midday dreary, while I scrolled on, bummed and teary,
 Over many a short and spurious video of current cultural lore—
 While I blinked on, nearly napping, suddenly there came a trapping,
@@ -74,7 +80,7 @@ Just manifest for sure.<p>
 Asked me to get ready with her from her closet door,
 “Surely,” said I, “surely there is some vid that will show me a snack:
 A fit of hunger soon to attack, and this refrigerator to explore”—
-Then a Doritos covered in <em>crème fraiche<e> and caviar appeared;—
+Then a Doritos covered in <em>crème fraiche</em> <!-- added this /em --> and caviar appeared;—
 “But alas, I am too poor.”</p>
 
 <p>Though a casserole looked appealing trying my stomach’s empty feeling—
