--- a/quarter-term/page3.html
+++ b/quarter-term/page3.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <div class="navbar">
+    <div class="navbar"><center>
         <a href="/html-midterm/page1.html">Page 1</a>
         <span> | </span>
         <a href="/html-midterm/page2.html">Page 2</a>
@@ -25,10 +25,10 @@
         <span> | </span>
         <a href="/html-midterm/page4.html">Page 4</a>
         <span> | </span>
-    </div>
+    </div></center> <!--centered the nav bar-->
     
-    <a href="https://en.wikipedia.org/wiki/Table_(information)">Source page</a>
-    <h1>Table (information)</h1>
+    <center><a href="https://en.wikipedia.org/wiki/Table_(information)">Source page</a></center> <!--centered-->
+    <h2>Table (information)</h2> <!-- cheanged to h2 for consistency-->
     <hr>
     <p>
         A table is an arrangement of information or data, typically in rows and columns, or possibly in a more complex structure. 
@@ -39,7 +39,8 @@
         Information or data conveyed in table form is said to be in tabular format (adjective). In books and technical articles, 
         tables are typically presented apart from the main text in numbered and captioned floating blocks.
     </p>
-    <h3>Basic Description</h3>
+    <br> <!-- added a break-->
+    <h2>Basic Description</h2> <!-- h2 for consistency-->
     <hr>
     <p>A table consists of an ordered arrangement of rows and columns. 
         This is a simplified description of the most basic kind of table. 
@@ -54,9 +55,11 @@
     </ul>
     <p>
         The elements of a table may be grouped, segmented, or arranged in many different ways, and even nested recursively. 
-        Additionally, a table may include metadata, annotations, a header,[6] a footer or other ancillary features.
+        Additionally, a table may include metadata, annotations, a header, a footer or other ancillary features. <!--removed the [6] because why is it there-->
     </p>
-    <h4>Simple Table</h4>
+    <br> <!-- added a break-->
+    <h2>Simple Table</h2> <!-- h2 for consistency-->
+    <hr> <!-- added hr for consistency-->
     <p>
         The following illustrates a simple table with three columns and nine rows. 
         The first row is not counted, because it is only used to display the column names. 
@@ -75,26 +78,26 @@
         </tr>
         <tr>
             <td>Javier</td>
-            <th>Zapata</th>
+            <td>Zapata</td> <!--changed to td from th-->
             <td>28</td>
-            <td>Lily</>
         </tr>
         <tr>
+            <td>Lily</td> <!-- moved lily's name from the previous column and closed the td-->
             <td>McGarrett</td>
             <td>36</td>
         </tr>
         <tr>
             <td>Olatunkbo</td>
             <td>Chijiaku</td>
+            <td>22</td> <!-- moved 22 from the following column to this one-->
         </tr>
         <tr>
-            <td>22</td>
             <td>Adrienne</td>
             <td>Anthoula</td>
             <td>22</td>
         </tr>
-        <td>Axelia</td>
         <tr>
+            <td>Axelia</td> <!-- moved into the correct column-->
             <td>Athanasios</td>
             <td>22</td>
         </tr>
