--- a/quarter-term/page5.html
+++ b/quarter-term/page5.html
@@ -55,6 +55,6 @@
     <li> added / before img src.
     <li> Added alt text for each image.
     <li> Reorganized the images so that they made sense.
+    </ol>
 
-
-
+</html>
