--- a/ica/ica5.html
+++ b/ica/ica5.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="ica5.css">
+    <link rel="stylesheet" href="/css/ica5.css">
     <title>Fancy letterheaded paper</title>
     
   </head>
