--- a/wa/wa7.html
+++ b/wa/wa7.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/wa7.css">
-    <title>Dance Like Nav</title>
+    <title>Billie Ray Cyrus</title>
 </head>
 <body>
     <h1>Australian Cattle Rats</h1> <!--change this text-->
