--- a/css-midterm/aboutmeMid.html
+++ b/css-midterm/aboutmeMid.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="/css-midterm/cssMid.html">
-            <img src="/css-midterm/gallery images/name.png" alt="Logo">
+            <img src="/css-midterm/galleryimages/name.png" alt="Logo">
         </a>
         <nav>
             <ul>
@@ -23,7 +23,7 @@
     
     <section id="about">
         <div class="about-content">
-          <img src="/css-midterm/gallery images/me.webp" alt="moody b & w photo of me">
+          <img src="/css-midterm/galleryimages/me.webp" alt="moody b & w photo of me">
           <h2> Howdy!
           <p>I'm Katie Lynn. I've spent the last 8 years as a photographer, which my website shows just a small portion of the work I've done. I've shot lifestyle, weddings, boudoir, product, headshots, family, maternity, etc. While I've loved being behind the camera, I am currently pursuing new creative avenues through the Creative Technology & Design Major at University of Colorado, Boulder. My expected graduation is Fall of 2024.</p>
         </div>
