--- a/css-midterm/resumeMid.html
+++ b/css-midterm/resumeMid.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="/css-midterm/cssMid.html">
-            <img src="/css-midterm/gallery images/name.png" alt="Logo">
+            <img src="/css-midterm/galleryimages/name.png"alt="Logo">
         </a>
         <nav>
             <ul>
