--- a/css-midterm/cssMid.html
+++ b/css-midterm/cssMid.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photography Portfolio - All Photos</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="/css-midterm/cssMid.css">
 </head>
 <body>
     <header>
         <a href="/css-midterm/cssMid.html">
-            <img src="/css-midterm/gallery images/name.png" alt="Logo">
+            <img src="/css-midterm/galleryimages/name.png"alt="Logo">
         </a>
         <nav>
             <ul>
+                
                 <li><a href="cssMid.html">Home</a></li>
                 <li><a href="aboutmeMid.html">About</a></li>
                 <li><a href="photosMid.html">Gallery</a></li>
                 <li><a href="resumeMid.html">Resume</a></li>
 
-            
             </ul>
         </nav>
     </header>
@@ -27,7 +27,7 @@
         <section id="MainPage">
             <h2></h2>
             <div class="MainPage-content">
-                <img src="/css-midterm/gallery images/tulum.webp" alt="Tulum, MX">
+                <img src="/css-midterm/galleryimages/tulum.webp"alt="Tulum, MX">
             </div>
         </section>
     </main>
