--- a/resumeMid.html
+++ b/resumeMid.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Resume</title>
     <link rel="stylesheet" href="/css-midterm/cssMid.css">
 </head>
 <body>
@@ -13,24 +13,20 @@
         </a>
         <nav>
             <ul>
-                
                 <li><a href="cssMid.html">Home</a></li>
                 <li><a href="aboutmeMid.html">About</a></li>
                 <li><a href="photosMid.html">Gallery</a></li>
-                <li><a href="resumeMid.html">Resume</a></li>
-
             </ul>
         </nav>
     </header>
 
-    <main>
-            <div class="MainPage-content">
-                <img src="/css-midterm/galleryimages/tulum.webp" alt="Tulum, MX">
-            </div>
-    </main>
+
+    <div class="resume-content">
+        <img src="resume23.jpg" alt="Resume">
+    </div>
+   
 
     <footer>
         <p>&copy; 2023 Katie Lynn Fischer</p>
     </footer>
-</body>
 </html>
