--- a/css/ica9.html
+++ b/css/ica9.html
@@ -10,7 +10,7 @@
 <body>
     <div>
         <p class="name">I made a button!</p>
-        <button>Change to Blue</button>
+        <button on click="changeColor()"> Change to blue</button>
       </div>
 </body>
 </html>
