--- a/resumeMid.html
+++ b/resumeMid.html
@@ -22,7 +22,7 @@
 
 
     <div class="resume-content">
-        <img src="resume23.jpg" alt="Resume">
+        <img src="/css-midterm/galleryimages/resume23.jpg" alt="Resume">
     </div>
    
 
