--- a/wa/wa10/wa10.html
+++ b/wa/wa10/wa10.html
@@ -15,7 +15,7 @@
     <div class="full-img">
       <img class="displayed-img" src="images/alaska4 copy.jpg" alt="Small lakefront hut in Alaska">
       <div class="overlay"></div>
-      <button class="dark">Darker</button>
+      <button class="dark">Darken</button>
     </div>
 
     <div class="thumb-bar">
