--- a/wa/wa11.html
+++ b/wa/wa11.html
@@ -7,10 +7,11 @@
   </head>
   <body>
     <div class="container">
-      <h1>Need a lil morale boost?</h1>
+      <h1>Need some random wisdom?</h1>
       <img id="image" src="" alt="random lil img">
       <p id="affirmation"></p>
       <button id="generate-button">Generate!</button>
+
     </div>
     <script src="/js/wa11.js"></script>
   </body>
