--- a/wa/wa11.html
+++ b/wa/wa11.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <h1>Need some random wisdom?</h1>
-      <img id="image" src="" alt="random lil img">
+      <img id="image" src="/img/hae a nice day.jpeg" alt="random lil img">
       <p id="affirmation"></p>
       <button id="generate-button">Generate!</button>
 
