--- a/wa/WA12.html
+++ b/wa/WA12.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta
-  <title>Employee Management</title>
+  <title></title>
+  <link rel="stylesheet" href="/css/WA12.css" />
 </head>
 <body>
+  <h1>Employee Data Log</h1>
   <script src="/js/WA12.js"></script>
 </body>
 </html>
