--- a/wa/WA13.html
+++ b/wa/WA13.html
@@ -7,8 +7,8 @@
   </head>
   <body>
         <div class="container">
-            <h1>Change your volume:</h1>
-            <p>Use the slider to select a number between 1 and 100, and then enter the corresponding Spanish word to change your volume.</p>
+            <h1>Want to adjust your volume?</h1>
+            <p>Use the slider to select a number between 1 and 100, and then enter the corresponding Spanish word to change your volume. Good luck!</p>
             <input type="range" min="1" max="100" value="1" id="slider">
             <br>
             <label for="answer">What is the spanish word for your number?</label>
