--- a/css-midterm/photosMid.html
+++ b/css-midterm/photosMid.html
@@ -21,6 +21,7 @@
     </header>
 
     <main>
+        <main id="gallery">
             <br>
             <p>Here's a collection of some of my work:</p>
             <br>
