--- a/css-midterm/cssMid.html
+++ b/css-midterm/cssMid.html
@@ -32,14 +32,7 @@
     <footer>
         <p>&copy; 2023 Katie Lynn Fischer</p>
     </footer>
-    <!-- <div id="popup" class="popup-hidden">
-        <div class="popup-content">
-            <h2>Get More Info</h2>
-            <form>
-            <label for="name">Name:</label>
-            <input type="text" id="
-            </div> -->
-
-        <script src="/css-midterm/jsFinal.js"></script>
+    <script src="jsFinal.js"></script>
 </body>
-</html>
+</html> 
+
