--- a/JS Final/jsFinal.html
+++ b/JS Final/jsFinal.html
@@ -7,11 +7,13 @@
 </head>
 <body>
 	<header>
+        <img src="/JS Final/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
 		<nav>
 			<ul>
                 <li><span class="jsFinal">Home</span></li>
 				<li><a href="/JS Final/resumeFinal.html">Resume</a></li>
 				<li><a href="/JS Final/photosFinal.html">Gallery</a></li>
+                <li><a href="/JS Final/designFinal.html">Design</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -23,7 +25,7 @@
             </div>
             <div class="about-me-text">
                     <h2> Howdy! </h2>
-                    <p>I'm Katie Lynn. I've spent the last 8 years as a photographer, which my website shows just a small portion of the work I've done. I've shot lifestyle, weddings, boudoir, product, headshots, family, maternity, etc. While I've loved being behind the camera, I am currently pursuing new creative avenues through the Creative Technology & Design Major at University of Colorado, Boulder. My expected graduation is Fall of 2024.</p>
+                    <p>I'm Katie Lynn. I've spent the last 8 years as a photographer, which my website shows just a small portion of the work I've done. I've shot lifestyle, weddings, boudoir, product, headshots, family, maternity, etc. While I've loved being behind the camera, I am currently pursuing new creative avenues through the Creative Technology & Design Major at University of Colorado, Boulder. My expected graduation is Fall of 2024. I've included some of my design work under the "Design" tab. If you'd like to get in touch, please click the button below!</p>
                 </p>
             </div>
         </section>
