--- a/JS Final/photosFinal.html
+++ b/JS Final/photosFinal.html
@@ -7,11 +7,13 @@
 </head>
 <body>
 	<header>
+        <img src="/JS Final/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
 		<nav>
 			<ul>
                 <li><a href="/JS Final/jsFinal.html">Home</a></li>
 				<li><a href="/JS Final/resumeFinal.html">Resume</a></li>
                 <li><a href="/JS Final/photosFinal.html">Gallery</a></li>
+                <li><a href="/JS Final/designFinal.html">Design</a></li>
 			</ul>
 		</nav>
 	</header>
