--- a/JS Final/resumeFinal.html
+++ b/JS Final/resumeFinal.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="/JS Final/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
         <a href="/JS Final/jsFinal.css">
         </a>
         <nav>
@@ -15,13 +16,20 @@
                 <li><a href="/JS Final/jsFinal.html">Home</a></li>
                 <li><a href="/JS Final/resumeFinal.html">Resume</a></li>
                 <li><a href="/JS Final/photosFinal.html">Gallery</a></li>
+                <li><a href="/JS Final/designFinal.html">Design</a></li>
             </ul>
         </nav>
     </header>
 
 
     <div class="resume-content">
-        <img id="resume-image" <img src="/css-midterm/galleryimages/resume23.jpg" alt="Resume">
+        <br>
+        <br>
+        <br>
+        <img id="resume-image" <img src="/JS Final/designfiles/indesign resume.png" alt="Resume">
+        <br>
+        <br>
+        <br>
     </div>
    
 
