--- a/JS Final/resumeFinal.html
+++ b/JS Final/resumeFinal.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <img src="/JS Final/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
+        <a href="/JS Final/jsFinal.html" class="header-logo-link">
+            <img src="/JS Final/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
+        </a>
         <a href="/JS Final/jsFinal.css">
         </a>
         <nav>
