--- a/JS Final/designFinal.html
+++ b/JS Final/designFinal.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <header>
-        <img src="/JS Final/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
+        <a href="/JS Final/jsFinal.html" class="header-logo-link">
+            <img src="/JS Final/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
+        </a>
         <nav>
             <ul>
                 <li><a href="/JS Final/jsFinal.html">Home</a></li>
