--- a/JS Final/jsFinal.html
+++ b/JS Final/jsFinal.html
@@ -34,7 +34,7 @@
     </main>  
 		<button id="get-info">Get in touch</button>
 		<div id="popup-form" class="form-popup">
-			<form class="form-container" action="jsFinal.php" method="POST">
+			<form class="form-container" action="https://formspree.io/f/mzbqolvb" method="POST">
 				<h3>Let's connect!</h3>
 				<label for="name"><b>Name</b></label>
 				<input type="text" placeholder="Enter Name" name="name" required>
