--- a/JS Final/aboutmeFinal.html
+++ b/JS Final/aboutmeFinal.html
@@ -6,20 +6,29 @@
 </head>
 <body>
 	<header>
+		<a href="/JS Final/jsFinal.html" class="header-logo-link">
+            <img src="/JS Final/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
+        </a>
 		<nav>
 			<ul>
-				<li><a href="/JS Final/jsFinal.html">Home</a></li>
-				<li><a href="/JS Final/resumeFinal.html">Resume</a></li>
-				<li><a href="/JS Final/photosFinal.html">Gallery</a></li>
+				<li><a href="/JS Final/jsFinal.html"data-page="home">Home</a></li>
+                <li><a href="/JS Final/aboutmeFinal.html"data-page="about me">About Me</a></li>
+				<li><a href="/JS Final/resumeFinal.html"data-page="resume">Resume</a></li>
+				<li><a href="/JS Final/photosFinal.html"data-page="gallery">Gallery</a></li>
+                <li><a href="/JS Final/designFinal.html"data-page="design">Design</a></li>
 			</ul>
 		</nav>
 	</header>
 	<main>
-		<h1>About Me</h1>
-		<p>
-            <br>
-            <h2> Howdy! </h2>
-            <p>I'm Katie Lynn. I've spent the last 8 years as a photographer, which my website shows just a small portion of the work I've done. I've shot lifestyle, weddings, boudoir, product, headshots, family, maternity, etc. While I've loved being behind the camera, I am currently pursuing new creative avenues through the Creative Technology & Design Major at University of Colorado, Boulder. My expected graduation is Fall of 2024.</p>
+		<section id="about-me">
+            <div class="about-me-image">
+                <img src="/css-midterm/galleryimages/me.jpg" alt="Website owner, Katie Fischer, in Costa Rica">
+            </div>
+            <div class="about-me-text">
+                    <p>Hi, I'm Katie Lynn. I've spent the last 8 years as a photographer, which my website shows just a small portion of the work I've done. I've shot lifestyle, weddings, boudoir, product, headshots, family, maternity, etc. While I've loved being behind the camera, I am currently pursuing new creative avenues through the <a href= "https://www.colorado.edu/atlas/">Creative Technology & Design</a> program at University of Colorado, Boulder. My expected graduation is Fall of 2024. I've included some of my design work under the "Design" tab. When I'm not photographing or at school, I am definitely hanging out with my cattle dog, <a href="https://www.instagram.com/billiegirlblue/">Billie</a>, playing in the snow, or taking my car off-road. I hope we can connect!</p>
+                </p>
+            </div>
+        </section>
 	</main>
 	<footer>
 		<p>&copy; 2023 Katie Lynn Fischer</p>
