--- a/JS Final/photosFinal.html
+++ b/JS Final/photosFinal.html
@@ -12,15 +12,16 @@
         </a>
 		<nav>
 			<ul>
-                <li><a href="/JS Final/jsFinal.html">Home</a></li>
-				<li><a href="/JS Final/resumeFinal.html">Resume</a></li>
-                <li><a href="/JS Final/photosFinal.html">Gallery</a></li>
-                <li><a href="/JS Final/designFinal.html">Design</a></li>
+                <li><a href="/JS Final/jsFinal.html"data-page="home">Home</a></li>
+                <li><a href="/JS Final/aboutmeFinal.html"data-page="about me">About Me</a></li>
+				<li><a href="/JS Final/resumeFinal.html"data-page="resume">Resume</a></li>
+				<li><a href="/JS Final/photosFinal.html"data-page="gallery">Gallery</a></li>
+                <li><a href="/JS Final/designFinal.html"data-page="design">Design</a></li>
 			</ul>
 		</nav>
 	</header>
 	<main>
-		<h1>Gallery</h1>
+		<br><h1>Gallery</h1><br>
 		    <div id="gallery">
                 <img src="/css-midterm/galleryimages/AK.webp" alt="Alaska Plane">
                 <img src="/css-midterm/galleryimages/alaska.webp" alt="Alaska AM">
