--- a/JS Final/resumeFinal.html
+++ b/JS Final/resumeFinal.html
@@ -15,10 +15,11 @@
         </a>
         <nav>
             <ul>
-                <li><a href="/JS Final/jsFinal.html">Home</a></li>
-                <li><a href="/JS Final/resumeFinal.html">Resume</a></li>
-                <li><a href="/JS Final/photosFinal.html">Gallery</a></li>
-                <li><a href="/JS Final/designFinal.html">Design</a></li>
+                <li><a href="/JS Final/jsFinal.html"data-page="home">Home</a></li>
+                <li><a href="/JS Final/aboutmeFinal.html"data-page="about me">About Me</a></li>
+				<li><a href="/JS Final/resumeFinal.html"data-page="resume">Resume</a></li>
+				<li><a href="/JS Final/photosFinal.html"data-page="gallery">Gallery</a></li>
+                <li><a href="/JS Final/designFinal.html"data-page="design">Design</a></li>
             </ul>
         </nav>
     </header>
