--- a/JS Final/jsFinal.html
+++ b/JS Final/jsFinal.html
@@ -12,37 +12,31 @@
         </a>
 		<nav>
 			<ul>
-                <li><span class="jsFinal">Home</span></li>
-				<li><a href="/JS Final/resumeFinal.html">Resume</a></li>
-				<li><a href="/JS Final/photosFinal.html">Gallery</a></li>
-                <li><a href="/JS Final/designFinal.html">Design</a></li>
+                <li><a href="/JS Final/jsFinal.html"data-page="home">Home</a></li>
+                <li><a href="/JS Final/aboutmeFinal.html"data-page="about me">About Me</a></li>
+				<li><a href="/JS Final/resumeFinal.html"data-page="resume">Resume</a></li>
+				<li><a href="/JS Final/photosFinal.html"data-page="gallery">Gallery</a></li>
+                <li><a href="/JS Final/designFinal.html"data-page="design">Design</a></li>
 			</ul>
 		</nav>
 	</header>
-	<main>
-		<h1>Katie Lynn Fischer</h1>
-        <section id="about-me">
-            <div class="about-me-image">
-                <img src="/css-midterm/galleryimages/me.jpg" alt="Website owner, Katie Fischer, in Costa Rica">
-            </div>
-            <div class="about-me-text">
-                    <h2> Howdy! </h2>
-                    <p>I'm Katie Lynn. I've spent the last 8 years as a photographer, which my website shows just a small portion of the work I've done. I've shot lifestyle, weddings, boudoir, product, headshots, family, maternity, etc. While I've loved being behind the camera, I am currently pursuing new creative avenues through the <a href= "https://www.colorado.edu/atlas/">Creative Technology & Design</a> Major at University of Colorado, Boulder. My expected graduation is Fall of 2024. I've included some of my design work under the "Design" tab. If you'd like to get in touch, please click the button below!</p>
-                </p>
-            </div>
-        </section>
-    </main>  
+    <main>
+        <br><h1>howdy.</h1><br>
+        <div id="home-img">
+            <img id="home-image" src="/css-midterm/galleryimages/DJI_0286-2.jpg" alt="Home Image, Tulum drone b&w">
+        </div>
+    </main> 
 		<button id="get-info">Get in touch</button>
 		<div id="popup-form" class="form-popup">
 			<form class="form-container" action="https://formspree.io/f/mzbqolvb" method="POST">
-				<h3>Let's connect!</h3>
+				<h3>Let's chat!</h3>
 				<label for="name"><b>Name</b></label>
 				<input type="text" placeholder="Enter Name" name="name" required>
 
 				<label for="email"><b>Email</b></label>
 				<input type="email" placeholder="Enter Email" name="email" required>
 
-				<label for="message"><b>Message</b></label>
+				<label for="message"><b>What would you like to connect about?</b></label>
 				<textarea placeholder="Enter Message" name="message" required></textarea>
 
 				<button type="submit" class="btn">Submit</button>
