--- a/JSFinal/photosFinal.html
+++ b/JSFinal/photosFinal.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Gallery | Katie Lynn Fischer</title>
-	<link rel="stylesheet" type="text/css" href="/JS Final/jsFinal.css">
-	<script src="/JS Final/jsFinal.js"></script>
+	<link rel="stylesheet" type="text/css" href="/JSFinal/jsFinal.css">
+	<script src="/JSFinal/jsFinal.js"></script>
 </head>
 <body>
 	<header>
-        <a href="/JS Final/jsFinal.html" class="header-logo-link">
-            <img src="/JS Final/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
+        <a href="/JSFinal/jsFinal.html" class="header-logo-link">
+            <img src="/JSFinal/designfiles/b&wlogo.png" alt="my Logo" class="header-logo">
         </a>
 		<nav>
 			<ul>
-                <li><a href="/JS Final/jsFinal.html"data-page="home">Home</a></li>
-                <li><a href="/JS Final/aboutmeFinal.html"data-page="about me">About Me</a></li>
-				<li><a href="/JS Final/resumeFinal.html"data-page="resume">Resume</a></li>
-				<li><a href="/JS Final/photosFinal.html"data-page="gallery">Gallery</a></li>
-                <li><a href="/JS Final/designFinal.html"data-page="design">Design</a></li>
+                <li><a href="/JSFinal/jsFinal.html"data-page="home">Home</a></li>
+                <li><a href="/JSFinal/aboutmeFinal.html"data-page="about me">About Me</a></li>
+                <li><a href="/JSFinal/resumeFinal.html"data-page="resume">Resume</a></li>
+                <li><a href="/JSFinal/photosFinal.html"data-page="gallery">Gallery</a></li>
+                <li><a href="/JSFinal/designFinal.html"data-page="design">Design</a></li>
 			</ul>
 		</nav>
 	</header>
